fixed alignement of results to the left Relates #64

--- a/public/style.css
+++ b/public/style.css
@@ -24,11 +24,18 @@ input {
 }
 ul {
   list-style: none;
+  padding: 0;
+  list-style-type: none;
 }
 iframe {
   width: 50em;
   height: 35em;
 }
+
+.iframe {
+  float:left;
+}
+
 button{
 padding: 10px 15px;
 color: #fff;
